# SPAM

./: CMakeLists.txt  README.md  spam.train.model
src/: transform.cc
test/: email.test  ham.email  ham.email.test  spam.email
train/: keywords  spam.train  transformed_test_cases
train/ham/: 1  1.transform  2  2.transform  3  3.transform  4  4.transform  5  5.transform
train/spam/: 1  2  3  3.transform  4  4.transform  5  5.transform
